[package]
name = "ts-rust-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
proc-macro2 = "1.0.49"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
syn-inline-mod = "0.5.0"
